--- a/style.css
+++ b/style.css
@@ -35,13 +35,14 @@ padding: 2% 5%;
 }
 #menu{
 	min-height: 10vh;
+	position: relative;
 }
-	#wrapper{
-min-height: 60vh;
-	}
-	#footer{
-		min-height: 10vh;
-			}
+#wrapper{
+	min-height: 60vh;
+}
+#footer{
+	min-height: 10vh;
+}
 .info{
 	width: 80%;
 	margin-top: -75px; 
@@ -94,7 +95,7 @@ clear: both;
 }
 
 #profileHeader{
-width: 100%;
+	width: 100%;
 }
 a,
 a:visited{
@@ -208,7 +209,6 @@ textarea:focus{
 #menuProfile img{
 	width: 100%;
     height: 100%;
-
 }
 
 #info{
@@ -289,16 +289,16 @@ textarea:focus{
 	box-shadow:  0 3px 2px 0px rgb(78, 86, 86);
 }
 .buttonRemove{
-background: rgb(161, 60, 60);
-border: none;
-padding: 1% 2%;
-color: white;
-float: right;
-width: 15%;
-height: 42px;
-font-size: 0.9em;
-border-top-left-radius: 10px;
-min-width: 100px;
+	background: rgb(161, 60, 60);
+	border: none;
+	padding: 1% 2%;
+	color: white;
+	float: right;
+	width: 15%;
+	height: 42px;
+	font-size: 0.9em;
+	border-top-left-radius: 10px;
+	min-width: 100px;
 }
 .buttonRemove:hover{
 	cursor: pointer;
@@ -344,17 +344,17 @@ min-width: 100px;
 	float:none;
 }
 .fnittrare {
-background: rgba(231, 231, 231, 0.57);
-margin: 2% 0;
-padding-top: 2% !important;
-width: 80%;
-margin: auto;
-margin-top: 2%;
-border: 1px solid rgba(198, 195, 195, 1) !important;
-border-radius: 5px;
+	background: rgba(231, 231, 231, 0.57);
+	margin: 2% 0;
+	padding-top: 2% !important;
+	width: 80%;
+	margin: auto;
+	margin-top: 2%;
+	border: 1px solid rgba(198, 195, 195, 1) !important;
+	border-radius: 5px;
 }
 .fnittrare:hover {
-background: rgba(231, 231, 231, 1);
+	background: rgba(231, 231, 231, 1);
 }
 .col-12{
 	width: 100%;
@@ -368,14 +368,14 @@ background: rgba(231, 231, 231, 1);
 }
 
 .col-12 .fnittrare {
-float: left;
-margin: 2%;
-text-align: center;
-width: 20%;
-min-width: 90px;
-border:none;
-padding:2%;
-word-wrap:break-word;
+	float: left;
+	margin: 2%;
+	text-align: center;
+	width: 20%;
+	min-width: 90px;
+	border:none;
+	padding:2%;
+	word-wrap:break-word;
 }
 .col-6{
 	width: 45%;
@@ -384,9 +384,9 @@ word-wrap:break-word;
 }
 .col-12 h2 ,
 .col-6 h2 {
-text-align: center;
-font-weight: lighter;
-color: #4E5656;
+	text-align: center;
+	font-weight: lighter;
+	color: #4E5656;
 }
 .clear{
 	clear:both;
@@ -394,22 +394,22 @@ color: #4E5656;
 
 /*--- back to top ---*/
 #smoothup{
-height: 40px;
-width: 40px;
-position: fixed;
-bottom: 50px;
-right: 100px;
-text-indent: -9999px;
-display: none;
-background: url('upp.png');
-background-size: cover;
+	height: 40px;
+	width: 40px;
+	position: fixed;
+	bottom: 50px;
+	right: 100px;
+	text-indent: -9999px;
+	display: none;
+	background: url('upp.png');
+	background-size: cover;
 }
 #smoothup:hover{
-background: url('upp-hover.png');
-background-size: cover;
-padding-bottom: 2px;
-height: 45px;
-width: 45px;
+	background: url('upp-hover.png');
+	background-size: cover;
+	padding-bottom: 2px;
+	height: 45px;
+	width: 45px;
 }
 
 .link{
@@ -420,16 +420,16 @@ width: 45px;
 
 @media all and (min-width: 681px) and (max-width: 1100px){
 
-	#menu ul{
-		width: 50%;
-	}
-	#menu a li{
-		margin:0;
-	}
-	#profile{
-		width: 30%;
-	}
-	#fnitters{
+#menu ul{
+	width: 50%;
+}
+#menu a li{
+	margin:0;
+}
+#profile{
+	width: 30%;
+}
+#fnitters{
 	width: 30%;
 	background: white;
 	margin:2.5%;
@@ -438,65 +438,67 @@ width: 45px;
 	padding-bottom: 2%;
 	clear:both;
 	float: left;
-	}
-	.container {
-background: #fff;
-width: 60%;
-/*margin-top: -31%;*/
-margin-right: 3%;
-margin-top: 4%;
-/* margin: 2.5%; */
-padding: 2%;
-border-radius: 15px;
-margin-left:20%;
-/* margin-top: -21%; */
-/*float: right;*/
+}
+.container {
+	background: #fff;
+	width: 60%;
+	margin-right: 3%;
+	margin-top: 4%;
+	padding: 2%;
+	border-radius: 15px;
+	margin-left:20%;
 }
 .crop img{
 	margin:0;
 }
 }
+
 @media all and (max-width: 680px){
-	#menu{
-		margin-bottom: 5%;
-	}
-	#menu h1 {
-		width: 100%;
-		margin:auto;
-		padding-bottom: 5%;
-		text-align: center;
-	}
-	#menu a li{
-		display: block;
-		margin-left: 0;
-	}
-	#menu input {
+#menu{
+	margin-bottom: 5%;
+}
+#menu h1 {
+	width: 100%;
+	margin:auto;
+	padding-bottom: 5%;
+	text-align: center;
+}
+#menu a li{
+	display: block;
+	margin-left: 0;
+}
+#menu input {
 	width: 50%;
 	margin: 5% auto;
 	display: block;
 	margin-bottom: 5%;
-	}
+}
 #profile{
 		width: 90%;
 		margin: auto;
 		float:none;
 		display: none;
-	}
+}
 #profile img{
-height: 150px;
-width:auto;
+	height: 150px;
+	width:auto;
 }
 
-	#profilLink #profile{
-		display: block;
-	}
-	#fnitters{
-		display:none;
-	}
-	.container{
-		width: 90%;
-		margin: 7% auto;
-	}
+#profilLink #profile{
+	display: block;
+}
+#fnitters{
+	display:none;
+}
+.container{
+	width: 90%;
+	margin: 5% auto;
+	border-radius: 0;
+}
+textarea {
+	height: 90px;
+	margin-top: 2%;
+}
  .show,
  .hide{
  	margin: 0;
